feat(game): 🎮 Create Game table, repository and service
