# internal/api/http/v1/routes/game-routes.go
@@ -1,0 +1,15 @@
+package httpV1
+
+import (
+	controllers "github.com/Audibene-GMBH/ta.go-hexagonal-skeletor/internal/api/http/v1/controllers"
+	"github.com/gin-gonic/gin"
+)
+
+func AttachV1PGameRoutes(router *gin.Engine, gameController *controllers.GameController) *gin.RouterGroup {
+	v1 := router.Group("/api/v1/")
+	v1.GET("/game/:gid", gameController.GetOne)
+	v1.GET("/game", gameController.GetMany)
+	v1.POST("/game", gameController.CreateOne)
+	v1.PATCH("/game/:gid", gameController.UpdateOne)
+	return v1
+}
